@@ -24,6 +24,7 @@
 * The bot will attempt to re-launch itself after downloading an update
 * Added an 'update' command
 * Fixed a bug where newlines were allowed in settings fields
+* Growl will be used in preference of the SystemTray API
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
